--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,8 @@ footer
 {
     background-color: #4180a6;
     text-align-last: center;
-    font-size: 420%;
-    height: 100px;
+    font-size: 100%;
+    height: 100%;
     font-family: arial;
     color: rgb(255, 255, 255);
 }
@@ -24,7 +24,7 @@ body
 }
 h1
 {
-    padding-left: 1%;
+    padding-left: 2%;
     font-size: 50px;
     color: rgb(255, 255, 255);
     font-family: arial;
@@ -39,6 +39,7 @@ p
     font-family: arial;
     text-align: justify;
     padding-right: 3%;
+    text-indent: 2%;
 }
 a
 {
@@ -60,6 +61,12 @@ h2
     margin-left: 2%;
     margin-right: 2%;
 }
-
-
-
+li
+{
+    font-size: 30px;
+    color: rgb(255, 255, 255);
+    font-family: arial;
+    text-align: justify;
+    padding-right: 3%;
+    margin-left: 1%;
+}
