--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,17 @@
 header
 {
     background-color: #4180a6;
-    text-align-last: center;
-    font-size: 420%;
-    height: 85px;
+    text-align: center;
+    font-size: 300%;
+    height: 100%;
     font-family: arial;
     color: rgb(255, 255, 255);
+    font-weight: 900;
 }
 footer
 {
     background-color: #4180a6;
-    text-align-last: center;
+    text-align: center;
     font-size: 100%;
     height: 100%;
     font-family: arial;
@@ -24,27 +25,28 @@ body
 }
 h1
 {
-    padding-left: 2%;
+    padding-left: 3%;
     font-size: 50px;
     color: rgb(255, 255, 255);
     font-family: arial;
     background-color:  #4180a6;
-    border-radius: 1000px;
+    border-radius: 100px;
 }
 p
 {
-    padding-left: 3%;
+    padding-left: 5%;
+    padding-right: 5%;
     font-size: 30px;
     color: rgb(255, 255, 255);
     font-family: arial;
     text-align: justify;
-    padding-right: 3%;
     text-indent: 2%;
 }
 a
 {
-    text-align: center;
-    padding-left: 3%;
+    line-break: anywhere;
+    text-align: justify;
+    color: rgb(255, 255, 255);
     font-size: 35px;
     color: rgb(0, 255, 13);
     font-family: arial;
@@ -52,7 +54,7 @@ a
 }
 h2
 {
-    padding-left: 1%;
+    padding-left: 2%;
     font-size: 30px;
     color: rgb(255, 255, 255);
     font-family: arial;
@@ -67,6 +69,6 @@ li
     color: rgb(255, 255, 255);
     font-family: arial;
     text-align: justify;
-    padding-right: 3%;
-    margin-left: 1%;
+    margin-right: 5%;
+    margin-left: 4%;
 }
