--- a/styles.css
+++ b/styles.css
@@ -1,325 +1,64 @@
-@media (min-width: 768px ){
-    header
-    {
-        background-color: #4180a6;
-        text-align: center;
-        font-size: 300%;
-        width: 100%;
-        font-family: arial;
-        color: rgb(255, 255, 255);
-        font-weight: 900;
-        top: 0%;
-        padding-left: 10%;
-        padding-right: 10%;
-    }
-    footer
-    {
-        background-color: #4180a6;
-        text-align: center;
-        font-size: 100%;
-        height: 100%;
-        font-family: arial;
-        color: rgb(255, 255, 255);
-        margin-top: 2%;
-    }
-    body
-    {
-        background-color: 	#202020;
-        padding: 0;
-        margin: 0;
-    }
-    h1
-    {
-        margin: 1%;
-        font-size: 50px;
-        color: rgb(255, 255, 255);
-        font-family: arial;
-        background-color:  #4180a6;
-        border-radius: 100px;
-        text-align: center;
-    }
-    p
-    {
-        padding-left: 20%;
-        padding-right: 20%;
-        font-size: 200%;
-        color: rgb(255, 255, 255);
-        font-family: arial;
-        text-align: justify;
-        text-indent: 2%;
-    }
-    a
-    {
-        line-break: anywhere;
-        text-align: justify;
-        color: #ffffff;
-        font-size: 35px;
-        color: #00ff0d;
-        font-family: arial;
-        text-underline-offset: 5000000000000px;
-    }
-    h2
-    {
-        font-size: 30px;
-        color: rgb(255, 255, 255);
-        font-family: arial;
-        background-color:  #474646;
-        border-radius: 1000px;
-        margin-left: 2%;
-        margin-right: 2%;
-        margin: 2%;
-        text-align: center;
-    }
-    li
-    {
-        font-size: 30px;
-        color: rgb(255, 255, 255);
-        font-family: arial;
-        text-align: justify;
-        margin-right: 5%;
-        margin-left: 4%;
-    }
-    marquee
-    {
-        font-size: 9px;
-        color: rgb(255, 255, 255);
-        font-family: arial;
-    }
-    table
-    {
-        width: 60%;
-        margin-left: 20%;
-        margin-right: 20%;
-    }
-    ul
-    {
-        padding-left: 20%;
-        padding-right: 20%;
-        font-size: 200%;
-        color: rgb(255, 255, 255);
-        font-family: arial;
-        text-align: justify;
-        text-indent: 2%;
-    }
-    *{
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-    .Lista
-    {
-        font-size: 100%;
-    }
-    .Centro
-    {
-        text-align: center;
-        margin: 2%;
-    }
-    .menuItem {
-        display: block;
-        margin: 1vh 1vw;
-        font-size: 5vh;
-        color: white;
-        text-decoration: none;
-    }
-    
-    .menuItem:hover {
-        text-decoration: underline;
-    }
-    
-    .hamburger {
-        position: fixed;
-        z-index: 100;
-        top: 2.5vh;
-        right: 2vw;
-        padding: 0.5%;
-        border:  #000000 solid 1px;
-        background: #474646;
-        cursor: pointer;
-        color: #ffffff;
-    }
-    
-    .closeIcon {
-        display: none;
-    }
-    
-    .menu {
-        position: fixed;
-        transform: translateY(-100%);
-        transition: transform 0.2s;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        z-index: 99;
-        background: black;
-        color: white;
-        list-style: none;
-        padding-top: 4rem;
-    }
-    
-    .showMenu {
-        transform: translateY(0);
-    }
+body {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color:rgba(230, 65, 147, 0.5); /* Cor de fundo azul claro */
 }
-@media (max-width: 768px ){
-    header
-    {
-        background-color: #4180a6;
-        text-align: center;
-        font-size: 200%;
-        width: 100%;
-        font-family: arial;
-        color: rgb(255, 255, 255);
-        font-weight: 900;
-        top: 0%;
-        padding-left: 10%;
-        padding-right: 10%;
-    }
-    footer
-    {
-        background-color: #4180a6;
-        text-align: center;
-        font-size: 100%;
-        height: 100%;
-        font-family: arial;
-        color: rgb(255, 255, 255);
-        margin-top: 2%;
-    }
-    body
-    {
-        background-color: 	#202020;
-        padding: 0;
-        margin: 0;
-    }
-    h1
-    {
-        margin: 1%;
-        font-size: 100%;
-        color: rgb(255, 255, 255);
-        font-family: arial;
-        background-color:  #4180a6;
-        border-radius: 100px;
-        text-align: center;
-    }
-    p
-    {
-        padding-left: 15%;
-        padding-right: 15%;
-        font-size: 125%;
-        color: rgb(255, 255, 255);
-        font-family: arial;
-        text-align: justify;
-        text-indent: 2%;
-    }
-    a
-    {
-        line-break: anywhere;
-        text-align: justify;
-        color: #ffffff;
-        font-size: 30px;
-        color: #00ff0d;
-        font-family: arial;
-        text-underline-offset: 5000000000000px;
-    }
-    h2
-    {
-        font-size: 25px;
-        color: rgb(255, 255, 255);
-        font-family: arial;
-        background-color:  #474646;
-        border-radius: 1000px;
-        margin-left: 2%;
-        margin-right: 2%;
-        margin: 2%;
-        text-align: center;
-    }
-    li
-    {
-        color: rgb(255, 255, 255);
-        font-family: arial;
-        text-align: justify;
-    }
-    marquee
-    {
-        font-size: 9px;
-        color: rgb(255, 255, 255);
-        font-family: arial;
-    }
-    table
-    {
-        width: 60%;
-        margin-left: 20%;
-        margin-right: 20%;
-    }
-    ul
-    {
-        padding-left: 20%;
-        padding-right: 20%;
-        font-size: 200%;
-        color: rgb(255, 255, 255);
-        font-family: arial;
-        text-align: justify;
-        text-indent: 2%;
-    }
-    *{
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-    .Lista
-    {
-        font-size: 50%;
-    }
-    .Centro
-    {
-        text-align: center;
-        margin: 2%;
-    }
-    .menuItem {
-        display: block;
-        margin: 1vh 1vw;
-        font-size: 5vh;
-        color: white;
-        text-decoration: none;
-    }
-    
-    .menuItem:hover {
-        text-decoration: underline;
-    }
-    
-    .hamburger {
-        position: fixed;
-        z-index: 100;
-        top: 2.5vh;
-        right: 2vw;
-        padding: 0.5%;
-        border:  #000000 solid 1px;
-        background: #474646;
-        cursor: pointer;
-        color: #ffffff;
-    }
-    
-    .closeIcon {
-        display: none;
-    }
-    
-    .menu {
-        position: fixed;
-        transform: translateY(-100%);
-        transition: transform 0.2s;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        z-index: 99;
-        background: black;
-        color: white;
-        list-style: none;
-        padding-top: 4rem;
-    }
-    
-    .showMenu {
-        transform: translateY(0);
-    }
+
+canvas {
+    display: block;
+    background-color: #FFF; /* Cor de fundo branco para o canvas */
+    margin: 0 auto; /* Centraliza o canvas */
+    border: 5px solid #000; /* Borda preta ao redor do canvas */
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+}
+
+#dialogBox {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #FFF;
+    padding: 20px;
+    border: 2px solid #000;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    z-index: 1;
+}
+
+#closeButton {
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    cursor: pointer;
+    color: #000; /* Cor do texto do botão */
+    font-weight: bold;
+}
+
+ul {
+    list-style-type: none; /* Remove marcadores de lista */
+    padding: 0;
+}
+
+li {
+    margin-bottom: 10px;
+}
+
+button {
+    background-color: #4CAF50; /* Cor de fundo verde */
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #45a049; /* Cor de fundo verde mais escura ao passar o mouse */
 }
