--- a/menu.css
+++ b/menu.css
@@ -143,6 +143,7 @@ body {
   width: 100%;
   animation: rotate 6s cubic-bezier(0.445, 0.05, 0.55, 0.95) infinite;
   align-items: center;
+  z-index: 0;
 }
 
 
@@ -174,17 +175,70 @@ body {
 }
 
 .imagem1 {
-  float: left;
-  margin-right: 10px; 
-  margin-top: 12%;
-  margin-left: 3%;
+  position: absolute;
+  float: right;
+  animation: fundo 50s infinite linear;
+  z-index: 3;
+  margin-top: 5%;
+  width: 30vh;
 }
 
 .imagem2 {
-  float: right;
-  margin-top: 12%;
-  margin-right: 0;
+  position: absolute;
+  float: left;
+  animation: fundoEsquerdo 40s infinite linear;
+  z-index: 2;
+  width: 50%;
+  margin: 20%;
+  overflow: hidden;
 }
 
+.imagem3 {
+  position: absolute;
+  float: right;
+  animation: fundoDiagonal 50s infinite linear;
+  z-index: 1;
+  margin-top: 5%;
+  width: 10vh;
+}
+
+@keyframes fundo
+{
+    from
+    {
+        right: 0;
+    }
+    to
+    {
+        right: 130%;
+    }
+}
+
+@keyframes fundoEsquerdo
+{
+    from
+    {
+        left: -50%;
+    }
+    to
+    {
+        left: 100%;
+        overflow: hidden;
+    }
+}
+
+@keyframes fundoDiagonal
+{
+    from
+    {
+        right: 0;
+        bottom: 0;
+    }
+    to
+    {
+        right: 130%;
+        bottom: 130%;
+    }
+}
 
 
