--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color:rgba(230, 65, 147, 0.5); /* Cor de fundo azul claro */
+    background-color: #da9ab8
 }
 
 canvas {
@@ -16,6 +16,25 @@ canvas {
     left: 50%;
 }
 
+ul{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0;
+}
+
+li{
+    
+}
+
+ul button{
+    margin-bottom: 1rem;
+    font-family: "Pacifico", cursive;
+}
+
+
+
 #dialogBox {
     display: none;
     position: absolute;
@@ -27,6 +46,7 @@ canvas {
     border: 2px solid #000;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     z-index: 1;
+    font-family: "Pacifico", cursive;
 }
 
 #closeButton {
@@ -36,19 +56,16 @@ canvas {
     cursor: pointer;
     color: #000; /* Cor do texto do botão */
     font-weight: bold;
+    font-family: "Pacifico", cursive;
 }
 
-ul {
-    list-style-type: none; /* Remove marcadores de lista */
-    padding: 0;
-}
-
-li {
-    margin-bottom: 10px;
+#timer{
+    float: right;
+    display: none;
 }
 
 button {
-    background-color: #4CAF50; /* Cor de fundo verde */
+    background-color: #c91e6da9; /* Cor de fundo verde */
     color: white;
     border: none;
     padding: 10px 20px;
