--- a/menu.css
+++ b/menu.css
@@ -1,40 +1,48 @@
 body {
   background-color: #da9ab8;
-  overflow: hidden;
 }
+
+
 
 .centerContainer {
   position: fixed;
-  max-width: 30vw;
+  max-width: 40vw;
   transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
-  z-index: 5;
 }
-
-@media (max-width:768px) {
+@media (max-width: 39.9375em) {
   .centerContainer {
-      max-width: 90vw;
-      width: 90vw;
+    max-width: 90vw;
+    width: 90vw;
   }
 }
-
 .centerContainer .title {
   width: 100%;
-  margin-left: 10%;
-  animation: balancar 1s infinite;
+  animation: rotate 6s cubic-bezier(0.445, 0.05, 0.55, 0.95) infinite;
+  margin-left: 3%;
 }
-
-.credit
-{
-  background-color: aqua;
+@keyframes rotate {
+  0% {
+    transform: rotate(2deg);
+  }
+  50% {
+    transform: rotate(-2deg);
+  }
+  100% {
+    transform: rotate(2deg);
+  }
+}
+.centerContainer menu {
+  width: 100%;
+  margin-top: 1.5rem;
 }
 .centerContainer menu .buttons {
   display: flex;
   width: 100%;
   height: 6rem;
-  border: 0.6rem #c91e6da9 solid;
-  background-color: #c91e6da9;
+  border: 0.6rem rgb(148, 44, 104) solid;
+  background: #c91e6da9;
   border-radius: 2rem;
   justify-content: center;
   align-items: center;
@@ -42,96 +50,82 @@ body {
   color: #f2f2f2;
   font-size: 2.25rem;
   cursor: pointer;
-  margin-bottom: 1rem;
+  transition: cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.4s all;
+  
 }
 .centerContainer menu .buttons:hover {
-  background-color: #da9ab8;
-  scale: 1;
-  height: 7rem;
-  transition:  1s;
-  transform: rotateZ(360deg);
+  background: linear-gradient(to top left, #ff7875, #fc5e5b);
+  font-size: 2.5rem;
+  transform: rotate(-1deg);
+}
+.centerContainer menu .buttons{
+  margin-bottom: 1rem;
 }
 
-.imagem1 {
-  position: absolute;
-  float: right;
-  animation: fundo 20s infinite linear;
-  z-index: 3;
-  margin-top: 5%;
-  width: 30vh;
+.players input[type=text] {
+  outline: none;
+  background-color: transparent;
+  border: 2px solid #f2f2f2;
+  padding: 0.5rem 1rem;
+  border-radius: 50px;
+  font-size: 1.25rem;
+  color: #f2f2f2;
+  font-family: "Montserrat", sans-serif;
+}
+.players input[type=number] {
+  display: none;
+}
+.players .buttonHolder {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+.players .buttonHolder button {
+  width: 80%;
+  outline: none;
+  height: 3.75rem;
+  font-size: 2rem;
+  border: 2px solid #b0302e;
+  color: #f2f2f2;
+  font-family: "Pacifico", cursive;
+  border-radius: 50px;
+  cursor: pointer;
+  background-color: #c91e6da9;
+  transition: cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.2s all;
+}
+.players .buttonHolder button:hover {
+  transform: scale(1.05);
+}
+.players .icons span {
+  cursor: pointer;
+  font-size: 3rem;
+}
+.players .icons span:not(:last-child) {
+  margin-right: 0.25rem;
+}
+.players .icons .selected {
+  opacity: 1;
+}
+.players .icons .selected:nth-child(even) {
+  color: red;
+}
+.players .icons .selected:nth-child(odd) {
+  color: black;
+}
+.players .disabled {
+  opacity: 0.6;
 }
 
-.imagem2 {
-  position: absolute;
-  float: left;
-  animation: fundoEsquerdo 40s infinite linear;
-  z-index: 2;
-  width: 50%;
-  margin: 20%;
+.credit {
+  text-align: center;
+  color: #f2f2f2;
 }
-
-.imagem3 {
-  position: absolute;
-  float: right;
-  animation: fundoDiagonal 50s infinite linear;
-  z-index: 1;
-  margin-top: 5%;
-  width: 10vh;
+.credit .name {
+  font-family: "Pacifico", cursive;
+  font-size: 33px;
 }
-
-@keyframes balancar {
-  0% {
-    transform: rotate(2deg);
-    scale: 1.1;
-  }
-  50% {
-    transform: rotate(-2deg);
-    scale: 1;
-  }
-  100% {
-    transform: rotate(2deg);
-    scale: 1.1;
-  }
-}
-
-@keyframes fundo
-{
-    from
-    {
-        right: -10%;
-        transform: rotateY(360deg);
-    }
-    to
-    {
-        right: 130%;
-    }
-}
-
-@keyframes fundoEsquerdo
-{
-    from
-    {
-        left: -50%;
-        transform: rotateX(360deg);
-    }
-    to
-    {
-        left: 100%;
-    }
-}
-
-@keyframes fundoDiagonal
-{
-    from
-    {
-        right: -10%;
-        bottom: -10%;
-        transform: rotateZ(360deg);
-    }
-    to
-    {
-        right: 130%;
-        bottom: 130%;
-    }
-}
-
+.credit .name:not(:last-child) {
+  margin-bottom: 1rem;
+  border-bottom: 1px solid #f2f2f2;
+}/*# sourceMappingURL=menu.css.map */ 
