--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
-body {
+body 
+{
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color:rgba(230, 65, 147, 0.5); /* Cor de fundo azul claro */
+    background-color: #da9ab8
 }
 
-canvas {
+canvas 
+{
     display: block;
     background-color: #FFF; /* Cor de fundo branco para o canvas */
     margin: 0 auto; /* Centraliza o canvas */
@@ -16,7 +18,25 @@ canvas {
     left: 50%;
 }
 
-#dialogBox {
+ul
+{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0;
+}
+
+ul button
+{
+    margin-bottom: 1rem;
+    font-family: "Pacifico", cursive;
+}
+
+
+
+#dialogBox 
+{
     display: none;
     position: absolute;
     top: 50%;
@@ -24,41 +44,48 @@ canvas {
     transform: translate(-50%, -50%);
     background-color: #FFF;
     padding: 20px;
-    border: 2px solid #000;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border: 0.4vh solid #000;
+    box-shadow: 0 0 10px rgb(0, 0, 0, 0.5);
     z-index: 1;
+    font-family: "Pacifico", cursive;
 }
 
-#closeButton {
+#closeButton 
+{
     position: absolute;
     top: 5px;
     left: 5px;
     cursor: pointer;
     color: #000; /* Cor do texto do botão */
     font-weight: bold;
+    font-family: "Pacifico", cursive;
 }
 
-ul {
-    list-style-type: none; /* Remove marcadores de lista */
-    padding: 0;
+#timer 
+{
+    float: right;
+    display: none;
 }
 
-li {
-    margin-bottom: 10px;
-}
 
-button {
-    background-color: #4CAF50; /* Cor de fundo verde */
+
+button 
+{
+    background-color: #c91e6da9; /* Cor de fundo verde */
     color: white;
-    border: none;
+    border-width: 0.5vh;
+    border-color: #c91e6da9;
     padding: 10px 20px;
     text-align: center;
-    text-decoration: none;
     display: inline-block;
     font-size: 16px;
     cursor: pointer;
+    border-radius: 5%;
 }
 
-button:hover {
-    background-color: #45a049; /* Cor de fundo verde mais escura ao passar o mouse */
+button:hover 
+{
+    background: #da9ab8;
+    transition: 1s;
+    scale: 1.01;
 }
