--- a/menu.css
+++ b/menu.css
@@ -1,40 +1,40 @@
-body {
-  background-color: #da9ab8;
-  overflow: hidden;
+body
+{
+background-color: #da9ab8;
+overflow: hidden;
 }
 
-.centerContainer {
+.centerContainer 
+{
   position: fixed;
-  max-width: 30vw;
+  max-width: 40vw;
   transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
-  z-index: 5;
+  z-index: 100;
 }
 
-@media (max-width:768px) {
-  .centerContainer {
-      max-width: 90vw;
-      width: 90vw;
-  }
-}
-
-.centerContainer .title {
-  width: 100%;
-  margin-left: 10%;
-  animation: balancar 1s infinite;
-}
-
-.credit
+.centerContainer .title 
 {
-  background-color: aqua;
+  width: 100%;
+  animation: rotate 6s infinite;
+  margin-left: 5%;
+  z-index: 100;
 }
-.centerContainer menu .buttons {
+
+.centerContainer menu 
+{
+  width: 100%;
+  margin-top: 1.5rem;
+
+}
+.centerContainer menu .buttons 
+{
   display: flex;
   width: 100%;
   height: 6rem;
-  border: 0.6rem #c91e6da9 solid;
-  background-color: #c91e6da9;
+  border: 0.6rem rgb(148, 44, 104) solid;
+  background: #c91e6da9;
   border-radius: 2rem;
   justify-content: center;
   align-items: center;
@@ -42,96 +42,33 @@ body {
   color: #f2f2f2;
   font-size: 2.25rem;
   cursor: pointer;
+  transition: cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.4s all;
+}
+.centerContainer menu .buttons:hover 
+{
+  background: #da9ab8;
+  transition: 1s;
+  scale: 1.01;
+}
+
+.centerContainer menu .buttons
+{
   margin-bottom: 1rem;
 }
-.centerContainer menu .buttons:hover {
-  background-color: #da9ab8;
-  scale: 1;
-  height: 7rem;
-  transition:  1s;
-  transform: rotateZ(360deg);
-}
 
-.imagem1 {
-  position: absolute;
-  float: right;
-  animation: fundo 20s infinite linear;
-  z-index: 3;
-  margin-top: 5%;
-  width: 30vh;
-}
-
-.imagem2 {
-  position: absolute;
-  float: left;
-  animation: fundoEsquerdo 40s infinite linear;
-  z-index: 2;
-  width: 50%;
-  margin: 20%;
-}
-
-.imagem3 {
-  position: absolute;
-  float: right;
-  animation: fundoDiagonal 50s infinite linear;
-  z-index: 1;
-  margin-top: 5%;
-  width: 10vh;
-}
-
-@keyframes balancar {
-  0% {
+@keyframes rotate 
+{
+  0% 
+  {
     transform: rotate(2deg);
-    scale: 1.1;
   }
-  50% {
+  50% 
+  {
     transform: rotate(-2deg);
-    scale: 1;
+    scale: 1.05;
   }
-  100% {
+  100% 
+  {
     transform: rotate(2deg);
-    scale: 1.1;
   }
 }
-
-@keyframes fundo
-{
-    from
-    {
-        right: -10%;
-        transform: rotateY(360deg);
-    }
-    to
-    {
-        right: 130%;
-    }
-}
-
-@keyframes fundoEsquerdo
-{
-    from
-    {
-        left: -50%;
-        transform: rotateX(360deg);
-    }
-    to
-    {
-        left: 100%;
-    }
-}
-
-@keyframes fundoDiagonal
-{
-    from
-    {
-        right: -10%;
-        bottom: -10%;
-        transform: rotateZ(360deg);
-    }
-    to
-    {
-        right: 130%;
-        bottom: 130%;
-    }
-}
-
