--- a/menu.css
+++ b/menu.css
@@ -1,4 +1,3 @@
-
 body
 {
 background-color: #da9ab8;
@@ -23,13 +22,8 @@ overflow: hidden;
   z-index: 100;
 }
 
-.centerContainer .title {
-  width: 100%;
-  animation: rotate 6s infinite;
-  margin-left: 5%;
-}
-
-.centerContainer menu {
+.centerContainer menu 
+{
   width: 100%;
   margin-top: 1.5rem;
 
@@ -62,12 +56,10 @@ overflow: hidden;
   margin-bottom: 1rem;
 }
 
-.centerContainer menu .buttons{
-  margin-bottom: 1rem;
-}
-
-@keyframes rotate {
-  0% {
+@keyframes rotate 
+{
+  0% 
+  {
     transform: rotate(2deg);
   }
   50% 
