--- a/styles.css
+++ b/styles.css
@@ -18,9 +18,8 @@ canvas
     left: 50%;
 }
 
-
-ul{
-
+ul
+{
     list-style: none;
     display: flex;
     flex-direction: column;
@@ -28,13 +27,16 @@ ul{
     padding: 0;
 }
 
-
-ul button{
+ul button
+{
     margin-bottom: 1rem;
     font-family: "Pacifico", cursive;
 }
 
-#dialogBox {
+
+
+#dialogBox 
+{
     display: none;
     position: absolute;
     top: 50%;
@@ -59,15 +61,14 @@ ul button{
     font-family: "Pacifico", cursive;
 }
 
-
-
-#timer {
+#timer 
+{
     float: right;
     display: none;
 }
 
-
-button {
+button 
+{
     background-color: #c91e6da9; /* Cor de fundo verde */
     color: white;
     border-width: 0.5vh;
@@ -80,8 +81,8 @@ button {
     border-radius: 5%;
 }
 
-
-button:hover {
+button:hover 
+{
     background: #da9ab8;
     transition: 1s;
     scale: 1.01;
