--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,11 @@
-body 
-{
+body {
     margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: #da9ab8
 }
 
-canvas 
-{
+canvas {
     display: block;
     background-color: #FFF; /* Cor de fundo branco para o canvas */
     margin: 0 auto; /* Centraliza o canvas */
@@ -18,8 +16,7 @@ canvas
     left: 50%;
 }
 
-ul
-{
+ul{
     list-style: none;
     display: flex;
     flex-direction: column;
@@ -27,16 +24,14 @@ ul
     padding: 0;
 }
 
-ul button
-{
+ul button{
     margin-bottom: 1rem;
     font-family: "Pacifico", cursive;
 }
 
 
 
-#dialogBox 
-{
+#dialogBox {
     display: none;
     position: absolute;
     top: 50%;
@@ -50,8 +45,7 @@ ul button
     font-family: "Pacifico", cursive;
 }
 
-#closeButton 
-{
+#closeButton {
     position: absolute;
     top: 5px;
     left: 5px;
@@ -61,14 +55,14 @@ ul button
     font-family: "Pacifico", cursive;
 }
 
-#timer 
-{
+#timer {
     float: right;
     display: none;
 }
 
-button 
-{
+
+
+button {
     background-color: #c91e6da9; /* Cor de fundo verde */
     color: white;
     border-width: 0.5vh;
@@ -81,8 +75,7 @@ button
     border-radius: 5%;
 }
 
-button:hover 
-{
+button:hover {
     background: #da9ab8;
     transition: 1s;
     scale: 1.01;
