--- a/menu.css
+++ b/menu.css
@@ -1,32 +1,35 @@
-body {
-  background-color: #da9ab8;
+body
+{
+background-color: #da9ab8;
+overflow: hidden;
 }
 
-.centerContainer {
+.centerContainer 
+{
   position: fixed;
   max-width: 40vw;
   transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
+  z-index: 100;
 }
-@media (max-width: 39.9375em) {
-  .centerContainer {
-    max-width: 90vw;
-    width: 90vw;
-  }
-}
-.centerContainer .title {
+
+.centerContainer .title 
+{
   width: 100%;
   animation: rotate 6s infinite;
   margin-left: 5%;
+  z-index: 100;
 }
 
-.centerContainer menu {
+.centerContainer menu 
+{
   width: 100%;
   margin-top: 1.5rem;
 
 }
-.centerContainer menu .buttons {
+.centerContainer menu .buttons 
+{
   display: flex;
   width: 100%;
   height: 6rem;
@@ -40,30 +43,32 @@ body {
   font-size: 2.25rem;
   cursor: pointer;
   transition: cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.4s all;
-  
 }
-.centerContainer menu .buttons:hover {
-    background: #da9ab8;
-    transition: 1s;
-    scale: 1.01;
+.centerContainer menu .buttons:hover 
+{
+  background: #da9ab8;
+  transition: 1s;
+  scale: 1.01;
 }
-.centerContainer menu .buttons{
+
+.centerContainer menu .buttons
+{
   margin-bottom: 1rem;
 }
 
-@keyframes rotate {
-  0% {
+@keyframes rotate 
+{
+  0% 
+  {
     transform: rotate(2deg);
   }
-  50% {
+  50% 
+  {
     transform: rotate(-2deg);
     scale: 1.05;
   }
-  100% {
+  100% 
+  {
     transform: rotate(2deg);
   }
 }
-
-
-
-
