--- a/paginas.css
+++ b/paginas.css
@@ -4,6 +4,16 @@ body
   overflow: hidden;
 }
 
+.centerContainer 
+{
+  position: fixed;
+  max-width: 40vw;
+  transform: translate(-50%, -50%);
+  top: 90%;
+  left: 47%;
+  z-index: 100;
+}
+
 #container 
 {
   z-index: 100;
@@ -70,6 +80,46 @@ body
 {
   width: 5%;
   animation: fundo 5s infinite linear;
+}
+
+.centerContainer menu 
+{
+  width: 100%;
+  margin-top: 1.5rem;
+
+}
+.centerContainer menu .buttons 
+{
+  display: flex;
+  width: 100%;
+  height: 6rem;
+  border: 0.6rem rgb(148, 44, 104) solid;
+  background: rgb(172, 74, 131);
+  border-radius: 2rem;
+  justify-content: center;
+  align-items: center;
+  font-family: "Pacifico", cursive;
+  color: #f2f2f2;
+  font-size: 2.25rem;
+  cursor: pointer;
+  transition: cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.4s all;
+}
+.centerContainer menu .buttons:hover 
+{
+  background: #da9ab8;
+  transition: 1s;
+  scale: 1.01;
+}
+.close:hover 
+{
+  background-color: #da9ab8;
+  transition: 1s;
+}
+
+
+.centerContainer menu .buttons
+{
+  margin-bottom: 1rem;
 }
 
 @keyframes fundo
